[package]
name = "shapes_demo_app"
version = "0.1.1"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
]
license = "Apache-2.0"
edition = "2021"
description = "Dust DDS Shapes Demo"

[lib]
path = "app/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dust_dds_shapes_demo = { path = "../" }
winit = { version = "0.29.4", features = [ "android-native-activity" ] }
log = "0.4"
android_logger = "0.13.1"
jni = "0.20"
